# flask_deneme

./: .env.example  .gitignore  README.md  app.py  celery_app.py  config.py  extensions.py  manage.py  pyproject.toml  requirements.txt  setup.cfg  test.db  uwsgi.ini
libs/: strings.py
migrations/: env.py
migrations/versions/: 043b3ef0791b_.py  300f38b2afab_.py  450e04b5f90e_.py  6d49ccba3b4b_.py  760e62db5a2c_.py  7e1baccf7422_.py  a2a88c210fbd_.py  c4879216ac88_.py  d4742714b6d4_.py
models/: __init__.py  address.py  company.py  remaining_employee.py  user.py
resources/: user.py
schemas/: address.py  company.py  remaining_employee.py  user.py
services/: email.py
strings/: en-en.json
tasks/: email.py
tests/: base.py  test_user.py
