[tool.poetry]
name = "ingrydhr_backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
flask = "^1.1.1"
flask-restx = "^0.1.1"
flask_sqlalchemy = "^2.4.1"
flask-jwt-extended = "^3.24.1"
flask_marshmallow = "^0.11.0"
python-dotenv = "^0.12.0"
flask_migrate = "^2.5.2"
marshmallow-sqlalchemy = "^0.22.3"
flake8 = "^3.7.9"
coverage = "^5.0.3"
uwsgi = "^2.0.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
